@@ -1,7 +1,7 @@
 /************************************************************************
  * sched/clock_gettime.c
  *
- *   Copyright (C) 2007, 2009, 2011 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2007, 2009, 2011, 2014 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -51,7 +51,7 @@
 #include "clock_internal.h"
 
 /************************************************************************
- * Definitions
+ * Pre-processor Definitions
  ************************************************************************/
 
 /************************************************************************
@@ -101,35 +101,80 @@ int clock_gettime(clockid_t clock_id, struct timespec *tp)
   uint32_t secs;
   uint32_t nsecs;
 #endif
+  uint32_t carry;
   int ret = OK;
 
   sdbg("clock_id=%d\n", clock_id);
   DEBUGASSERT(tp != NULL);
 
-  /* CLOCK_REALTIME - POSIX demands this to be present. This is the wall
-   * time clock.
+  /* CLOCK_MONOTONIC is an optional under POSIX: "If the Monotonic Clock
+   * option is supported, all implementations shall support a clock_id
+   * of CLOCK_MONOTONIC defined in <time.h>. This clock represents the
+   * monotonic clock for the system. For this clock, the value returned
+   * by clock_gettime() represents the amount of time (in seconds and
+   * nanoseconds) since an unspecified point in the past (for example,
+   * system start-up time, or the Epoch). This point does not change
+   * after system start-up time. The value of the CLOCK_MONOTONIC clock
+   * cannot be set via clock_settime(). This function shall fail if it
+   * is invoked with a clock_id argument of CLOCK_MONOTONIC."
+   */
+
+  if (clock_id == CLOCK_MONOTONIC)
+    {
+      /* Get the time since power-on in seconds and milliseconds */
+
+      msecs = MSEC_PER_TICK * g_system_timer;
+      secs  = msecs / MSEC_PER_SEC;
+
+      /* Return the elapsed time in seconds and nanoseconds */
+
+      nsecs = (msecs - (secs * MSEC_PER_SEC)) * NSEC_PER_MSEC;
+      if (nsecs > NSEC_PER_SEC)
+        {
+          carry  = nsecs / NSEC_PER_SEC;
+          secs  += carry;
+          nsecs -= (carry * NSEC_PER_SEC);
+        }
+
+      tp->tv_sec  = (time_t)secs;
+      tp->tv_nsec = (long)nsecs;
+    }
+
+  /* CLOCK_REALTIME - POSIX demands this to be present.  CLOCK_REALTIME
+   * represents the machine's best-guess as to the current wall-clock,
+   * time-of-day time. This means that CLOCK_REALTIME can jump forward and
+   * backward as the system time-of-day clock is changed.
+   *
+   * If an RTC is supported, then the non-standard CLOCK_ACTIVETIME is also
+   * supported to manage time based on the system timer interrupt separately
+   * from the RTC.  This may be necessary, for example, in certain cases where
+   * the system timer interrupt has been stopped in low power modes.
    */
 
 #ifdef CONFIG_RTC
-  if (clock_id == CLOCK_REALTIME || clock_id == CLOCK_ACTIVETIME)
+  else if (clock_id == CLOCK_REALTIME || clock_id == CLOCK_ACTIVETIME)
 #else
-  if (clock_id == CLOCK_REALTIME)
+  else if (clock_id == CLOCK_REALTIME)
 #endif
     {
-      /* Do we have a high-resolution RTC that can provie us with the time? */
+      /* Do we have a high-resolution RTC that can provide us with the time? */
 
 #ifdef CONFIG_RTC_HIRES
       if (g_rtc_enabled && clock_id != CLOCK_ACTIVETIME)
         {
-          /* Yes.. Get the hi-resolution time from the RTC */
+          /* Yes.. Get the hi-resolution time from the RTC unless the caller
+           * has specifically asked for the system timer (CLOCK_ACTIVETIME)
+           */
 
           ret = up_rtc_gettime(tp);
         }
       else
 #endif
         {
-          /* Get the elapsed time since power up (in milliseconds) biased
-           * as appropriate.
+          /* Get the elapsed time since the time-of-day was last set.
+           * g_system_timer provides the number of clock times since
+           * power was applied; the bias value corresponds to the time
+           * when the time-of-day was last set.
            */
 
           msecs = MSEC_PER_TICK * (g_system_timer - g_tickbias);
@@ -146,7 +191,10 @@ int clock_gettime(clockid_t clock_id, struct timespec *tp)
                (int)msecs, (int)g_basetime.tv_sec,
                (int)nsecs, (int)g_basetime.tv_nsec);
 
-          /* Add the base time to this. */
+          /* Add the base time to this.  The base time is the time-of-day
+           * setting.  When added to the elapsed time since the time-of-day
+           * was last set, this gives us the current time.
+           */
 
           secs  += (uint32_t)g_basetime.tv_sec;
           nsecs += (uint32_t)g_basetime.tv_nsec;
@@ -155,9 +203,9 @@ int clock_gettime(clockid_t clock_id, struct timespec *tp)
 
           if (nsecs > NSEC_PER_SEC)
             {
-              uint32_t dwCarrySecs = nsecs / NSEC_PER_SEC;
-              secs  += dwCarrySecs;
-              nsecs -= (dwCarrySecs * NSEC_PER_SEC);
+              carry  = nsecs / NSEC_PER_SEC;
+              secs  += carry;
+              nsecs -= (carry * NSEC_PER_SEC);
             }
 
           /* And return the result to the caller. */
@@ -172,7 +220,7 @@ int clock_gettime(clockid_t clock_id, struct timespec *tp)
     {
       sdbg("Returning ERROR\n");
 
-      errno = EINVAL;
+      set_errno(EINVAL);
       ret = ERROR;
     }
 
